--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node --watch src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "pedro_dias",
   "license": "ISC",
   "description": "",
   "dependencies": {
